# beam-split-paragraph

./: pyproject.toml  voltar_dps.txt
beam_split_paragraph/: .dockerfile  app.py  requirements.txt  script.py  teste(pytorch).py  teste.py
